Extract the common build logic into a set of convention plugins